# evolo-preprocessing-pointcloud

./: .gitignore  README.md  your_qos.yaml
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/pcl_conversions/share/pcl_conversions/: local_setup.sh  package.sh
install/pcl_ros/lib/pcl_ros/: pcd_to_pointcloud
install/pcl_ros/share/pcl_ros/: package.sh
install/pcl_ros/share/pcl_ros/cmake/: export_pcl_rosExport.cmake
install/perception_pcl/share/perception_pcl/: package.sh
install/pointcloud_to_laserscan/include/pointcloud_to_laserscan/: pointcloud_to_laserscan_node.hpp  vgicp_registration.hpp
install/pointcloud_to_laserscan/lib/pointcloud_to_laserscan/: dummy_pointcloud_publisher  laserscan_to_pointcloud_node  pointcloud_to_laserscan_node
install/pointcloud_to_laserscan/share/pointcloud_to_laserscan/: package.sh  package.xml
install/pointcloud_to_laserscan/share/pointcloud_to_laserscan/cmake/: ament_cmake_export_dependencies-extras.cmake
install/pointcloud_to_laserscan/share/pointcloud_to_laserscan/launch/: sample_pointcloud_to_laserscan_launch.py
install/small_gicp/share/small_gicp/: package.sh
log/: latest_build  latest_list
new_clone/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
new_clone/install/pcl_conversions/share/pcl_conversions/: package.sh
new_clone/install/pcl_ros/lib/pcl_ros/: pcd_to_pointcloud
new_clone/install/pcl_ros/share/pcl_ros/: local_setup.sh  package.sh
new_clone/install/perception_pcl/share/perception_pcl/: local_setup.sh  package.sh
new_clone/install/pointcloud_to_laserscan/include/pointcloud_to_laserscan/: pointcloud_to_laserscan_node.hpp
new_clone/install/pointcloud_to_laserscan/lib/pointcloud_to_laserscan/: dummy_pointcloud_publisher  laserscan_to_pointcloud_node  pointcloud_to_laserscan_node
new_clone/install/pointcloud_to_laserscan/share/pointcloud_to_laserscan/: local_setup.sh  package.sh  package.xml
new_clone/log/: latest_build  latest_list
new_clone/src/saving old files/: pointcloud_to_laserscan_node.cpp
src/: notes.txt
src/bb_dataAssociation_traking/: CMakeLists.txt  package.xml
src/bb_dataAssociation_traking/include/: RotatingCalipers.h  bounding_box_node.hpp  kalmanFilter.hpp
src/bb_dataAssociation_traking/launch/: obb_launch.py  tracking_launch_evolo.py  tracking_launch_sim.py
src/bb_dataAssociation_traking/src/: RotatingCalipers.cpp  bounding_box_node.cpp  kalmanFilter.cpp  laserscan_to_pointcloud.cpp  main.cpp  notes.txt  timing_metrics.cpp
src/clustering_segmentation/: CMakeLists.txt  package.xml
src/clustering_segmentation/include/: euclidean_spatial.hpp
src/clustering_segmentation/include/occupancy_grid/: occupancy_grid.h  occupancy_grid_node.h
src/clustering_segmentation/launch/: mapping_clustering_launch.py  mapping_clustering_segmentation_launch.py  mapping_clustering_segmentation_launch_sim.py  mapping_launch.py
src/clustering_segmentation/src/: euclidean_spatial.cpp  occupancy_grid.cpp  occupancy_grid_node.cpp  timing_metrics.cpp
src/mapping_bringup/: package.xml  setup.py
src/mapping_bringup/launch/: mapping_tracking_launch.py
src/mqtt bridge/: mqtt_bridge_config.yaml  mqtt_bridge_config_2.yaml  readme.txt
src/point_to_laserscan/: CMakeLists.txt  README.md  package.xml
src/point_to_laserscan/config/: Local_mapping.yaml  mapping.yaml  tf_static.yaml
src/point_to_laserscan/include/: filtering_params.hpp  pointcloud_preprocessing_node.hpp  pointcloud_to_laserscan_node.hpp
src/point_to_laserscan/include/pointcloud_to_laserscan/: pointcloud_to_laserscan_node.hpp  vgicp_registration.hpp
src/point_to_laserscan/launch/: mapping_launch.py  mapping_launchGlobal.py  mapping_launch_old.py  mapping_localnode.py  pointcloud_preprocessing_launch_boat.py  pointcloud_preprocessing_launch_evolo.py  pointcloud_preprocessing_launch_radar.py  pointcloud_preprocessing_launch_sim.py  pointcloud_to_laserscan_launch_boat.py  pointcloud_to_laserscan_launch_evolo.py  pointcloud_to_laserscan_launch_evolo_footprintZ.py  pointcloud_to_laserscan_launch_sim.py  sample_pointcloud_to_laserscan_launch.py  sample_pointcloud_to_laserscan_launch_boat.py  sample_pointcloud_to_laserscan_launch_sim.py
src/point_to_laserscan/src/: base_footprint_publisher.cpp  filtering_params.cpp  pointcloud_preprocessing_node.cpp  pointcloud_to_laserscan_node.cpp  timing_metrics.cpp  version_control.txt  vgicp_registration.cpp
src/ros2_occupancy_grid/: CMakeLists.txt  package.xml
src/ros2_occupancy_grid/include/: mqtt_occupancy_bridge.hpp
src/ros2_occupancy_grid/include/occupancy_grid/: occupancy_grid.h  occupancy_grid_node.h
src/ros2_occupancy_grid/src/: euclidean_spatial.cpp  mqtt_occupancy_bridge.cpp  occupancy_grid.cpp  occupancy_grid_node.cpp
src/snipets/: cutrosbag.py  dynamicTf.py  gps_map.html  mergeLaserScans.py  quaternion2Yaw.py  radarRosbag.py  ros2bag_remove_mapodomtf.py  testgt.txt  tfs_baselink.py
src/snipets/metrics/: MOT16_REALgt.py  MOT16_SIMgt.py  MOT16_computeMetrics.ipynb  SIMgt_StaticDynamic_noNoise.txt  results.txt  results_test.txt  savingFIleMetrics.py  test_detect.txt  textGT.txt  todo.txt
src/snipets/metrics/bad_metric_file_trash/: boatGT_real1_noframe.txt
src/snipets/metrics/metric_files/: notes.txt
src/snipets/metrics/metric_files/busterWaraps/: bbTracking_realBuster1.txt  bbTracking_realBuster1_interpolated.txt  bbTracking_realBuster1_velocities3.txt  bbTracking_realBuster1_velocities5.txt  bbTracking_realBuster2.txt  bbTracking_realBuster2_interpolated.txt  bbTracking_realBuster2_velocities10.txt  bbTracking_realBuster2_velocities3.txt  bbTracking_realBuster2_velocities5.txt  boatGT_real1.txt  boatGT_real2.txt  resultsBoatGt_real2.txt  resultsboatGT_real1.txt
src/snipets/metrics/metric_files/projected/: boundingBoxMetrics_DynamicNonProjected  (+1 more)
src/snipets/rosbag manipulation/: cutrosbag.py  liveMapsGPS.py  plotGPSmap.py
src/snipets/usedToMergeRealGtData/: filter1TftoOutputbag.py  fix2Tf.py  injectTffromFix.py
src/str_json_mqtt_bridge/config/: waraps.yaml
src/str_json_mqtt_bridge/launch/: waraps_bridge.launch
(+14 files in other folders)
