<?xml version="1.0"?>
<package format="2">
    <name>bb_dataass_tracking</name>
    <version>1.0.1</version>
    <description> Uses a clustered 2D pointcloud, produces an oriented bouding box around each object, does kalman filtering and data association to track these objects</description>

    <maintainer email="apldar@kth.se">Alexandre Reis</maintainer>
    <author email="apldar@kth.se">Alexandre Reis</author>

    <license>BSD</license>

    

    <buildtool_depend>ament_cmake_auto</buildtool_depend>

    <depend>message_filters</depend>
    <depend>rclcpp</depend>
    <depend>rclcpp_components</depend>
    <depend>sensor_msgs</depend>
    <depend>visualization_msgs</depend>
    <depend>cmath</depend>
    <depend>vector</depend>
    <depend>tf2</depend>
    <depend>tf2_ros</depend>
    <depend>tf2_eigen</depend>
    <depend>tf2_sensor_msgs</depend>
    <depend>tf2_geometry_msgs</depend> <!-- Add this line -->
    <depend>pcl_ros</depend>




    <exec_depend>launch</exec_depend>
    <exec_depend>launch_ros</exec_depend>


    <test_depend>ament_lint_auto</test_depend>
    <!-- <exec_depend>ament_cmake_copyright</exec_depend> -->
    <test_depend>ament_cmake_cppcheck</test_depend>
    <test_depend>ament_cmake_cpplint</test_depend>
    <test_depend>ament_cmake_flake8</test_depend>
    <test_depend>ament_cmake_lint_cmake</test_depend>
    <test_depend>ament_cmake_pep257</test_depend>
    <test_depend>ament_cmake_uncrustify</test_depend>
    <test_depend>ament_cmake_xmllint</test_depend>

    <export>
        <build_type>ament_cmake</build_type>
    </export>
</package>
