<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>clustering_segmentation</name>
  <version>0.0.1</version>
  <description>A ROS2 package that takes in odometry and laser scan data to build a 2D local occupancy grid that rools with robot.
                The package also receives a Point Cloud, clusters it with Eucledian Clusters and outputs a clustered pointcloud
                The package uses the occupancy_grid to define which new clusters are  .</description>
  <!-- This package is based on the implementation from Hiwad Aziz to create a rolling occupancy grid. It was extensivey modified and adapted. Original code: https://github.com/hiwad-aziz/ros2_occupancy_grid -->
    <author email="apldar@kth.se">Alexandre Reis</author>
    <maintainer email="apldar@kth.se">Alexandre Reis</maintainer>
    <license>MIT</license>

  <depend>rclcpp</depend>
  <depend>sensor_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>pcl_ros</depend>


  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
