<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>mapping_bringup</name>
  <version>0.0.0</version>
  <description>Launch the slam mappig nodes and a node to control these. This also launches clustering, detection and tracking algorithms for dynamic objects.</description>
  <maintainer email="alexandreleitereis@gmail.com">alex</maintainer>
  <license>TODO: License declaration</license>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>
  
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>rclpy</exec_depend>

  <exec_depend>slam_toolbox</exec_depend>
  <exec_depend>pointcloud_to_laserscan</exec_depend>
  <exec_depend>ufo_mapping</exec_depend>
  <exec_depend>bb_dataass_tracking</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
