<?xml version="1.0"?>
<package format="2">
    <name>pointcloud_preprocessing</name>
    <version>2.0.1</version>
    <description>Filters a raw 3D PointCloud for a maritime environment with noisy points from water detection. Converts the filtered 3D Point Cloud into a 2D laser scan. Publishes several topics that use the filtered 2D data. 
    Published topics: filtered laser scan (published in laser scan msg and point cloud msg); time decay / accumulated filtered laser scan (published as 2d point cloud); range radial map of closest detection for each angle interval 
    ( output in low density laser scan, used for obstacle avoidance, and high density laser scan made to be viewed on rviz); etc.
    This package also has a node that generates a base_footprint tf and odom from the given robot's base_link</description>


    <!-- This package uses the implementation from Paul Bovbel, Tully Foote and Michel Hidalgo to convert Point Clouds to laserscans. Source code found here: https://github.com/ros-perception/pointcloud_to_laserscan -->
    <author email="apldar@kth.se">Alexandre Reis</author>
    <maintainer email="apldar@kth.se">Alexandre Reis</maintainer>

    <license>BSD</license>

    <url type="bugtracker">https://github.com/AlexReis1313/evolo-preprocessing-pointcloud/issues</url>
    <url type="repository">https://github.com/AlexReis1313/evolo-preprocessing-pointcloud</url>

    <buildtool_depend>ament_cmake_auto</buildtool_depend>

    <depend>message_filters</depend>
    <depend>rclcpp</depend>
    <depend>rclcpp_components</depend>
    <depend>sensor_msgs</depend>
    <depend>tf2</depend>
    <depend>tf2_ros</depend>
    <depend>tf2_eigen</depend>
    <depend>tf2_sensor_msgs</depend>
    <depend>tf2_geometry_msgs</depend> <!-- Add this line -->
    <depend>pcl_ros</depend>
    <depend>laser_geometry</depend>
    <depend>visualization_msgs</depend>
    <depend>nav_msgs</depend>
    <depend>nav2_costmap_2d</depend>
    <depend>nav2_common</depend>
    <depend>nav2_map_server</depend>
    <depend>nav2_lifecycle_manager</depend>
    <depend>nav2_msgs</depend>
    <depend>nav2_util</depend>
    <depend>nav2_voxel_grid</depend>










    <exec_depend>launch</exec_depend>
    <exec_depend>launch_ros</exec_depend>


    <test_depend>ament_lint_auto</test_depend>
    <!-- <exec_depend>ament_cmake_copyright</exec_depend> -->
    <test_depend>ament_cmake_cppcheck</test_depend>
    <test_depend>ament_cmake_cpplint</test_depend>
    <test_depend>ament_cmake_flake8</test_depend>
    <test_depend>ament_cmake_lint_cmake</test_depend>
    <test_depend>ament_cmake_pep257</test_depend>
    <test_depend>ament_cmake_uncrustify</test_depend>
    <test_depend>ament_cmake_xmllint</test_depend>

    <export>
        <build_type>ament_cmake</build_type>
    </export>
</package>
